many stuff to go with first version online

--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div id="layout-bottom">
+  <div id="layout-bottom" class="pb-5 pb-lg-0">
     {% include 'jumplink-footer' %}
   </div>
 
