--- a/theme/sections/newsletter.liquid
+++ b/theme/sections/newsletter.liquid
@@ -11,7 +11,7 @@
     <h1 class="h6">{{ 'title' | t }}</h1>
     <p>{{ 'content_html' | t: name: name, email: email }}</p>
 
-    <a class="" href="#" rv-on-click="send">Absenden</a>
+    <a class="" href="#" rv-on-click="send">Subscribe</a>
   </div>
 </rv-newsletter>
 
