--- a/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
@@ -1,4 +1,5 @@
-<a class="col px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};">
+{% comment %} <a class="col px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};"> {% endcomment %}
+<div class="col px-0 content-box ratio-3-4" style="background-color: {{ color }};">
   <img class="content has-xs-spacing has-sm-spacing" rv-src="'{{ article.image | img_url: articleImageSize}}'" alt="{{acticle.title}}" style="padding: 52px" />
 
   {% if article.title %}
@@ -8,4 +9,5 @@
       </div>
     </div>
   {% endif %}
-</a>
+</div>
+{% comment %} </a> {% endcomment %}
