--- a/theme/snippets/jumplink-article-list-item-view-magazine.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-magazine.liquid
@@ -21,7 +21,7 @@
       <p><small><strong>
         <span>Share this article</span>
         <span class="pl-3">{ comments | count } Comments</span>
-        <a class="ml-auto float-right" rv-route="'{{article.url}}'">View Article</a>
+        {% comment %} <a class="ml-auto float-right" rv-route="'{{article.url}}'">View Article</a> {% endcomment %}
       </strong></small></p>
     </div>
   </article>
