--- a/theme/snippets/jumplink-login.liquid
+++ b/theme/snippets/jumplink-login.liquid
@@ -1,7 +1,7 @@
 <div class="container-fluid pt-5">
   <div class="row pt-5">
     <div class="col col-md-8 col-lg-6 mx-auto">
-      <p>The store is not yet unlocked, but this will be the case in a few weeks.<br />Many Thanks.</p>
+      <p>The new FASSBENDER store will be open in a few weeks.<br />Stay tuned!</p>
       <p><a rv-route="'/collections/all'" href="/collections/all">Back to products</a></p>
     </div>
   </div>
