--- a/theme/templates/search.liquid
+++ b/theme/templates/search.liquid
@@ -19,10 +19,10 @@ selectors inside search.css.
 
       <div class="form-row align-items-center">
         <div class="col-auto">
-          <input name="q" type="search" class="form-control" id="search-field" placeholder="{{ 'navigation.shop_actions.search' | t }}" value="{{ search.terms | escape }}" />
+          <input name="q" type="search" class="form-control" id="search-field" placeholder="Search" value="{{ search.terms | escape }}" />
         </div>
         <div class="col-auto">
-          <input type="submit" class="btn btn-link" id="search-submit" value="{{ 'navigation.shop_actions.search' | t }}" />
+          <input type="submit" class="btn btn-link" id="search-submit" value="Start" />
         </div>
       </div>
     
