--- a/src/scss/_position.scss
+++ b/src/scss/_position.scss
@@ -11,6 +11,14 @@
   right: 0;
 }
 
+.sticky-bottom {
+  @supports (position: sticky) {
+    position: sticky;
+    bottom: 0;
+    z-index: $zindex-sticky;
+  }
+}
+
 @include media-breakpoint-only(xs) {
   .bottom-xs-0 {
     bottom: 0 !important;
