--- a/theme/snippets/jumplink-article-list-item-view-one-story.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-one-story.liquid
@@ -19,8 +19,8 @@
   {% endif %}
 {% endcapture %}
 
-
-<a rv-route="'{{ article.url }}'" href="{{article.url}}" data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-one-story" style="background-color: {{ color }};">
+{% comment %} <a rv-route="'{{ article.url }}'" href="{{article.url}}" data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-one-story" style="background-color: {{ color }};"> {% endcomment %}
+<div data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-one-story" style="background-color: {{ color }};">
   <div class="row">
     {% for image in images %}
 
@@ -57,5 +57,5 @@
       </div>
     </div>
   {% endif %}
-
-</a>
+</div>
+{% comment %} </a> {% endcomment %}
