--- a/theme/snippets/jumplink-contact-form.liquid
+++ b/theme/snippets/jumplink-contact-form.liquid
@@ -1,70 +1,79 @@
-{% form 'contact' %}
+<rv-contact-form>
+  {% capture firstName %}
+    <p class="text-primary mb-1" contenteditable="true" rv-value="firstName | default 'First Name&#42;'" rv-on-focus="selectAll"></p>
+    <input type="hidden" name="contact[firstName]" rv-value="firstName">
+  {% endcapture %}
 
-  {% if form.posted_successfully? %}
-    <div class="col-xs-12 successForm feedback">
-      {{ 'contact.form.post_success' | t }}
-    </div>
-  {% endif %}
+  {% capture lastName %}
+    <p class="text-primary mb-1" contenteditable="true" rv-value="lastName | default 'Last Name&#42;'" rv-on-focus="selectAll"></p>
+    <input type="hidden" name="contact[lastName]" rv-value="lastName">
+  {% endcapture %}
 
-  {% if form.errors %}
-  <div class="col-xs-12 errorForm feedback">
-    <!-- {{ form.errors.size }} or {{ form.errors | size }} -->
-    <p>Your contact form has {{ form.errors | size | pluralize: ‘an error’, ‘a few errors’ }}. To submit your form, make the following changes and try again:</p>
-    {% for field in form.errors %}
-      <p>The {{ field | capitalize | replace: 'Body', 'Message' }} field {{ form.errors.messages[field] }}.</p>
-    {% endfor %}
-  </div>
-  {% endif %}
+  {% capture phone %}
+    <p class="text-primary mb-1" contenteditable="true" rv-value="phone | default 'Phone'" rv-on-focus="selectAll"></p>
+    <input type="hidden" name="contact[phone]" rv-value="phone">
+  {% endcapture %}
 
-  <div class="col-xs-12 col-sm-12" id="contactFormWrapper">
-    <div class="description text-left mb-1">
-      {% if contact_title == blank %}
-        <h1 class="text-serif text-normal">{{settings.homepage_contact_title}}</h1>
-      {% else %}
-        <h1 class="text-serif text-normal">{{contact_title}}</h1>
+  {% capture email %}
+    <p class="text-primary mb-1" contenteditable="true" rv-value="email | default 'Email&#42;'" rv-on-focus="selectAll"></p>
+    <input type="hidden" name="contact[email]" rv-value="email">
+  {% endcapture %}
+
+  {% capture message %}
+    <p class="text-primary my-3" contenteditable="true" rv-value="message | default 'Message'" rv-on-focus="selectAll"></p>
+    <input type="hidden" name="contact[message]" rv-value="message">
+  {% endcapture %}
+
+  {% form 'contact' %}
+    <div class="py-5">
+
+      <h2 class="h6 mb-3">Any questions? Fell free to contact us.</h2>
+
+      <p>
+        Send us a message to <a href="mailto:info@myfassbender.com">info@myfassbender.com</a>
+        or call us <a href="tel:+494403925400">+49 4403 925400</a><br>
+        <small>monday - friday 10.00 - 18.00</small>
+      </p>
+
+      {% if form.posted_successfully? %}
+        <p class="text-success mb-3" role="alert" id="contact-form-success">
+          Message sent successfully. Many Thanks!
+        </p>
       {% endif %}
-      <div class="text-left">
-        <p>{{settings.homepage_contact_text | newline_to_br}}</p>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <div class="form-group">
-          <label class="sr-only">{{ 'contact.form.firstname' | t }}</label>
-          <input type="text" class="form-control text-left" required id="contactFormFirstname" placeholder="{{ 'contact.form.firstname' | t }}" name="contact[firstname]">
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div class="form-group">
-          <label class="sr-only">{{ 'contact.form.name' | t }}</label>
-          <input type="text" class="form-control text-left" required id="contactFormName" placeholder="{{ 'contact.form.name' | t }}" name="contact[name]">
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div class="form-group">
-          <label class="sr-only">{{ 'contact.form.email' | t }}</label>
-          <input type="email" class="form-control text-left" required id="contactFormEmail" placeholder="{{ 'contact.form.email' | t }}" name="contact[email]">
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div class="form-group">
-          <label class="sr-only">{{ 'contact.form.phone' | t }}</label>
-          <input type="number" class="form-control text-left" required id="contactFormPhone" placeholder="{{ 'contact.form.phone' | t }}" name="contact[phone]">
-        </div>
-      </div>
-      <div class="col-xs-12">
-        <div class="form-group">
-          <label class="sr-only">{{ 'contact.form.message' | t }}</label>
-          <textarea required rows="10" class="form-control" id="contactFormMessage" placeholder="{{ 'contact.form.message' | t }}" name="contact[body]"></textarea>
-        </div>
-      </div>
-      <div class="col-xs-12">
-        <div class="form-group text-left">
-          <input type="submit" class="btn btn-primary p-x-1" id="contactFormSubmit" value="{{ 'contact.form.send' | t }}" />
-        </div>
-      </div>
-    </div>
-  </div>
+      <p rv-show="success | filled" class="text-success mb-3" role="alert" id="contact-error">
+        { success }
+      </p>
 
-{% endform %}
+      {% if form.errors %}
+        <p class="text-danger mb-3" role="alert" id="contact-form-error">
+          Message could not be sent:
+          {% for error in form.errors %}
+            {{ error }}
+          {% endfor %}
+        </p>
+      {% endif %}
+
+      <p rv-show="error | filled" class="text-danger mb-3" role="alert" id="contact-error">
+        Message could not be sent: { error }
+      </p>
+
+      <h2 class="h6 mb-3">Message Us</h2>
+      {{ firstName }}
+      {{ lastName }}
+      {{ phone }}
+      {{ email }}
+      {{ message }}
+
+      <div class="custom-control custom-checkbox mt-5 mb-1">
+        <input type="checkbox" class="custom-control-input" name="contact[privacy]" id="acceptPrivacy">
+        <label class="custom-control-label" for="acceptPrivacy">
+          Yes, I authorise the processing of my personal data according to the <a href=""Privacy Statement></a>.<br>
+        </label>
+      </div>
+      <p>The fields marked with * are required</p>
+
+      <button type="submit" class="btn btn-link" rv-on-click="send">Send Message</button>
+    </div>
+  {% endform %}
+</rv-contact-form>
