--- a/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
@@ -17,14 +17,8 @@
     <img class="content has-xs-spacing has-sm-spacing" rv-src="'{{ product.featured_image | img_url: imageSize}}'" alt="{{product.featured_image.alt}}"  style="padding-bottom: 52px;"/>
   </a>
   <div class="position-absolute w-100 bottom-0">
-    <div class="row m-0">
-      <div class="col-8 text-left text-truncate">
-        <strong>{{ product.title }}</strong><br />
-        {{ product.price | money }}
-      </div>
-      <div class="col text-right text-truncate">
-        <a hidden href="#">Add</a>
-      </div>
+    <div class="text-center title-xs-spacing title-sm-spacing text-truncate">
+      <strong>{{ product.title }}</strong>
     </div>
   </div>
 </rv-shopify-product-item>
