--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -1,16 +1,23 @@
-<div class="container pt-5">
+<div class="container-fluid pt-5 mt-md-5">
   <div class="row">
-    <div class="col-xs-12 text-center">
-      <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
-    </div>
+    {% unless page.title == blank %}
+      <div class="col-12 col-md-10 offset-md-2 text-left">
+        <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
+      </div>
+    {% endunless %}
 
     {% unless page.content == blank %}
-        <div class="col-xs-12 col-md-8 offset-md-2 rte">
+        <div class="col-12 col-md-10 offset-md-2 rte">
         {{ page.content }}
         </div>
     {% endunless %}
-    
-    {% include 'jumplink-contact-form', contact_title: page.title %}
+  </div>
+</div>
 
+<div class="container-fluid" id="contact">
+  <div class="row">
+    <div class="col-12 col-md-10 offset-md-2 rte">
+      {% include 'jumplink-contact-form' %}
+    </div>
   </div>
 </div>
