--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -1,5 +1,5 @@
-<div class="container-fluid pt-5 mt-md-5">
-  <div class="row">
+<div class="container-fluid pt-5">
+  <div class="row pt-md-5">
     {% unless page.title == blank %}
       <div class="col-12 col-md-10 offset-md-2 text-left">
         <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
