--- a/theme/templates/page.without-title.liquid
+++ b/theme/templates/page.without-title.liquid
@@ -1,5 +1,5 @@
-<div class="container-fluid pt-5 mt-md-5" id="page-{{ page.handle }}">
-  <div class="row">
+<div class="container-fluid pt-5" id="page-{{ page.handle }}">
+  <div class="row pt-md-5">
     {% unless page.content == blank %}
         <div class="col-12 col-md-10 offset-md-2 rte">
         {{ page.content }}
