--- a/src/scss/templates/_legals.scss
+++ b/src/scss/templates/_legals.scss
@@ -2,7 +2,7 @@
   display: none;
 }
 
-#fassbender-legal-area {
+#page-legals {
   h2, h3, h4, h5, h6 {
     font-size: 1rem !important;
   }
@@ -10,5 +10,9 @@
   h1 {
     font-size: 1rem;
     font-family: "Helvetica";
+  }
+
+  #contact {
+    min-height: 100vh;
   }
 }
