--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -31,7 +31,7 @@
 
 </head>
 
-<body id="{{ page_title | handle }}">
+<body id="{% include 'jumplink-utils-get-namespace' %}" rv-id="dataset.namespace">
 
   <div id="layout-top">
     {% include 'jumplink-navigation' %}
