[Component] Instagram component and instagram page

--- a/src/ts/components/_index.scss
+++ b/src/ts/components/_index.scss
@@ -2,3 +2,4 @@
 @import './shopify-filter/shopify-filter.component.scss';
 @import './icon/icon.component.scss';
 @import './newsletter/newsletter.component.scss';
+@import './instagram/instagram.component.scss';
