[Component] Instagram scrollbar component / section on home

--- a/src/ts/components/_index.scss
+++ b/src/ts/components/_index.scss
@@ -3,3 +3,4 @@
 @import './icon/icon.component.scss';
 @import './newsletter/newsletter.component.scss';
 @import './instagram/instagram.component.scss';
+@import './instagram-scrollbar/instagram-scrollbar.component.scss';
