--- a/theme/sections/product-scrollbar.liquid
+++ b/theme/sections/product-scrollbar.liquid
@@ -10,7 +10,7 @@
     {% endfor %}
     <div class="col-3"></div>
   </div>
-  <div class="row">
+  <div class="row my-4">
     <div class="col-12 text-center" rv-html="title | default '{{ collection.title }}'"></div>
   </div>
 </rv-product-scrollbar>
