--- a/theme/templates/page.instagram.liquid
+++ b/theme/templates/page.instagram.liquid
@@ -21,10 +21,10 @@
     <div class="row">
       <div class="col-4 px-0 content-box ratio-1-1" rv-each-image="media.data" rv-class="image.media_type">
         {% comment %} IMAGE {% endcomment %}
-        <img class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" alt="">
+        <img class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
 
         {% comment %} CAROUSEL_ALBUM {% endcomment %}
-        <img class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" alt="">
+        <img class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
         
         {% comment %} VIDEO {% endcomment %}
         <video class="content" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
